Edited config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 jobs:
   test:
     docker:
-      - image: circleci/node
+      - image: cimg/node:17.9.0
     steps:
       - checkout
       - run: npm install
@@ -14,7 +14,7 @@ jobs:
       - run: npm run lint
   deploy:
     docker:
-      - image: circleci/node
+      - image: cimg/node:17.9.0
     environment:
       AWS_REGION: eu-west-2
     steps:
