--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,12 @@
 # .circleci/config.yml
+
 version: 2.1
 orbs:
-  aws-s3: circleci/aws-s3@2.0
+  aws-s3: circleci/aws-s3@3.0.0
 jobs:
   test:
     docker:
-      - image: cimg/node:17.9.0
+      - image: circleci/node
     steps:
       - checkout
       - run: npm install
@@ -13,7 +14,7 @@ jobs:
       - run: npm run lint
   deploy:
     docker:
-      - image: cimg/node:17.9.0
+      - image: circleci/node
     environment:
       AWS_REGION: eu-west-2
     steps:
@@ -26,7 +27,6 @@ jobs:
           arguments: |
             --acl public-read \
             --cache-control "max-age=86400" \
-          overwrite: true
 workflows:
   version: 2.1
   build:
